# systemsweep

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css  index.html
src-tauri/: .gitignore  Cargo.toml  build_error.txt  tauri.conf.json
src-tauri/src/: cli.rs  commands.rs  database.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/cleaner/: mod.rs  safe_delete.rs  undo.rs
src-tauri/src/cleanup/: mod.rs  restore.rs  safe_delete.rs  secure_delete.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/core/: cleaner.rs  duplicates.rs  mod.rs  rules.rs  scanner.rs  state.rs  undo.rs
src-tauri/src/memory/: mod.rs  optimizer.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/scanner/: cache_scanner.rs  duplicate_detector.rs  duplicate_finder.rs  file_scanner.rs  large_file_finder.rs  mod.rs  rules.rs
src-tauri/src/scheduler/: agent.rs  mod.rs
src-tauri/src/startup/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/system/: mod.rs
src-tauri/src/telemetry/: mod.rs
src-tauri/src/utils/: config.rs  logging.rs  mod.rs
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Modal.tsx  Progress.tsx  Toggle.tsx
src/components/views/: Dashboard.tsx  Duplicates.tsx  Scanner.tsx  Settings.tsx  Startup.tsx
src/hooks/: useBackend.ts  useCleanup.ts  useScanner.ts  useSystemHealth.ts  useTheme.ts
src/scripts/: app.js
src/stores/: appStore.ts
src/styles/: globals.css  main.css
src/types/: index.ts
src/utils/: api.ts  format.ts
