[package]
name = "desktop-cleaner"
version = "1.0.0"
edition = "2021"
authors = ["Desktop Cleaner Team"]
description = "Cross-platform desktop cleaner"

[lib]
name = "desktop_cleaner_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "desktop-cleaner"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File operations
walkdir = "2.5"
glob = "0.3"
trash = "5"
dirs = "5"
fs_extra = "1.3"

# Hashing for duplicates
sha2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
blake3 = "1.5"

# System info
sysinfo = "0.31"
disk-types = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
toml = "0.8"
config = "0.14"

# Database for scan history
rusqlite = { version = "0.32", features = ["bundled"] }

# Parallel processing
rayon = "1.10"
crossbeam-channel = "0.5"

# Platform specific
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_Services",
    "Win32_Security"
]}

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
